fixing overflow issues

--- a/sass/flexnav.scss
+++ b/sass/flexnav.scss
@@ -157,17 +157,14 @@ time, mark, audio, video {
 			max-width: 1080px;
 		}
 		li {
+			@include transition(.4s);
 			position: relative;
 			list-style: none;
 			float: left;
 			display: block;	
 			background-color: #a6a6a2;	
 			width: 20%;
-			overflow: hidden;
-			
-			&:hover {
-				overflow: visible;
-			}
+			overflow: visible;
 		}
 		li a {
 			border-left: 1px solid #acaca1;
@@ -184,6 +181,7 @@ time, mark, audio, video {
 			li {
 				width: 100%;
 				overflow: hidden;
+				max-height: 0;
 			}
 		}
 		li:hover > ul,
@@ -194,6 +192,7 @@ time, mark, audio, video {
 			
 			li {
 				overflow: visible;
+				max-height: 50px;
 			}
 		}
 		li ul li > ul {
